clang/test/BSC/Negative/Trait/GenericTrait/impl_trait_for_trait/impl_trait_for_trait.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
_Trait Future {
  int foo(This* this);
};

_Trait F<T> {
  int foo(This* this);
};

_Impl _Trait F<int> for _Trait F<int>;  // expected-error {{invalid syntax, semi not expected after '_Trait F'}}
_Impl _Trait F<int> for _Trait Future;  // expected-error {{invalid syntax, semi not expected after '_Trait Future'}}
                                     // expected-error@-1 {{function 'foo' in '_Trait F<int>' is not implemented for '_Trait Future'}}


